--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "leaflet": "^1.2.0",
     "lodash": "^4.17.4",
-    "material-ui": "^0.19.1",
+    "material-ui": "^0.19.2",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-leaflet": "^1.6.6",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.3",
     "react-scripts": "1.0.13",
