--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^8.3.0",
     "react-leaflet": "^1.6.6",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.3",
