--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "socket.io": "^2.0.3",
     "stripe": "^5.0.0"
   }
 }
