--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     },
     "/api/*": {
       "target": "http://localhost:5000"
+    },
+    "/*": {
+      "target": "http://localhost:5000"
     }
   },
   "dependencies": {
@@ -23,7 +26,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.0.4",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io-client": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
