--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
+    "build": "npm install --prefix client && npm run build --prefix client",
     "webhook": "ngrok http 5000",
     "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +20,7 @@
   "author": "JP Mamuric",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.1",
     "concurrently": "^3.5.0",
     "cookie-parser": "^1.4.3",
