--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.0.4",
+    "redux-socket.io": "^1.4.0",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.3"
   },
